# 3A-Tries-Adventure

./: CMakeLists.txt  README.md  bitwiseops.h  liltrie.cpp  liltrie.h  main-test.cpp  main.cpp  mtrie.cpp  mtrie.h  random220.h  trie.cpp  trie.h
child_histogram/: dictionary16.txt  dictionary256.txt  dictionary8.txt  words1024.txt  words128.txt  words16.txt  words256.txt  words32.txt  words512.txt  words64.txt  words8.txt
test_node_functions/: dictionary16.txt  dictionary256.txt  dictionary8.txt  words1024.txt  words128.txt  words16.txt  words256.txt  words32.txt  words512.txt  words64.txt  words8.txt
wordlists/: dictionary16.txt  dictionary256.txt  dictionary8.txt  words1024.txt  words128.txt  words16.txt  words256.txt  words32.txt  words512.txt  words64.txt  words8.txt
